# BenchmarksPythonJuliaAndCo

./: .gitignore  LICENSE  README.md  TODO  runAllBenchmarks.sh
BenchmarksPythonJuliaAndCo.wiki/: Home.md
CallBack/: README.md  runAllTests.sh
CallBack/C++-Fonctor/: CMakeLists.txt  main.cpp
CallBack/C++-Pointer/: CMakeLists.txt  main.cpp
CallBack/C++-lambda/: main.cpp
CallBack/Ju/: main.jl  script
CallBack/Numba/: README.md  main.py
CallBack/Py/: README.md  main.py
CallBack/Pythran/: README.md  f.py  g.py  implicit.py  main.py  script  trapz.py
CallBack/Results/: Look.py  README.md
FeStiff/: README.md  runAllTests.sh
FeStiff/C++/: CMakeLists.txt  README.md  Stiffness.hpp  main.cpp  rando.hpp
FeStiff/Ju/: README.md  Rando.jl  Rotation.jl  Stiffness.jl  main.jl
FeStiff/Numba/: RandomTriangle.py  Stiffness.py  main.py  rando.py
FeStiff/Py/: RandomTriangle.py  Stiffness.py  main.py
FeStiff/Pythran/: README.md  (+8 more)
Gaussian/: README  README.md  runAllTests.sh
Gaussian/C++/: CMakeLists.txt  README  README.md  RandomFeedMatrix.hpp  RuningOnkepler  factorMatrix.hpp  main.cpp
Gaussian/C++/ARRAY/: .gitignore  Doxyfile  README
Gaussian/C++/ARRAY/Doc/: doxygen_sqlite3.db
Gaussian/C++/ARRAY/Doc/html/: ApplyFonc_8hpp.html  ApplyFonc_8hpp__dep__incl.map  ApplyFonc_8hpp__dep__incl.md5  ApplyFonc_8hpp_source.html  ArrayException_8hpp.html  ArrayException_8hpp__dep__incl.map  ArrayException_8hpp__dep__incl.md5  ArrayException_8hpp__incl.map  ArrayException_8hpp__incl.md5  ArrayException_8hpp_source.html  Array_8hpp.html  Array_8hpp__dep__incl.map  Array_8hpp__dep__incl.md5  Array_8hpp__incl.map  Array_8hpp__incl.md5  Array_8hpp_source.html  Array__Access__Operators_8hpp.html  Array__Access__Operators_8hpp__dep__incl.map  Array__Access__Operators_8hpp__dep__incl.md5  Array__Access__Operators_8hpp_source.html  Array__Array__Operators_8hpp.html  Array__Array__Operators_8hpp__dep__incl.map  Array__Array__Operators_8hpp__dep__incl.md5  Array__Array__Operators_8hpp_source.html  Array__Constructors__RangeBased_8hpp.html  Array__Constructors__RangeBased_8hpp__dep__incl.map  Array__Constructors__RangeBased_8hpp__dep__incl.md5  Array__Constructors__RangeBased_8hpp_source.html  Array__Constructors__RangeBased__NotSafe_8hpp.html  Array__Constructors__RangeBased__NotSafe_8hpp__dep__incl.map  Array__Constructors__RangeBased__NotSafe_8hpp__dep__incl.md5  Array__Constructors__RangeBased__NotSafe_8hpp_source.html  Array__Output_8hpp.html  Array__Output_8hpp__incl.map  Array__Output_8hpp__incl.md5  Array__Output_8hpp_source.html  Array__Scalar__Operators_8hpp.html  Array__Scalar__Operators_8hpp__dep__incl.map  Array__Scalar__Operators_8hpp__dep__incl.md5  Array__Scalar__Operators_8hpp_source.html  (+84 more)
Gaussian/C++/ARRAY/Doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+17 more)
Gaussian/C++/ARRAY/Doc/latex/: ApplyFonc_8hpp.tex  ApplyFonc_8hpp__dep__incl.md5  ArrayException_8hpp.tex  ArrayException_8hpp__dep__incl.md5  ArrayException_8hpp__incl.md5  Array_8hpp.tex  Array_8hpp__dep__incl.md5  Array_8hpp__incl.md5  Array__Access__Operators_8hpp.tex  Array__Access__Operators_8hpp__dep__incl.md5  Array__Array__Operators_8hpp.tex  Array__Array__Operators_8hpp__dep__incl.md5  Array__Constructors__RangeBased_8hpp.tex  Array__Constructors__RangeBased_8hpp__dep__incl.md5  Array__Constructors__RangeBased__NotSafe_8hpp.tex  Array__Constructors__RangeBased__NotSafe_8hpp__dep__incl.md5  Array__Output_8hpp.tex  Array__Output_8hpp__incl.md5  Array__Scalar__Operators_8hpp.tex  Array__Scalar__Operators_8hpp__dep__incl.md5  Array__iterators_8hpp.tex  Array__iterators_8hpp__dep__incl.md5  Array__iterators_8hpp__incl.md5  Array__resize_8hpp.tex  Array__resize_8hpp__dep__incl.md5  CEngine_8hpp.tex  CEngine_8hpp__dep__incl.md5  CEngine_8hpp__incl.md5  FEngine_8hpp.tex  FEngine_8hpp__dep__incl.md5  FEngine_8hpp__incl.md5  MacroRestrict_8hpp.tex  MacroRestrict_8hpp__dep__incl.md5  Range_8hpp.tex  Range_8hpp__dep__incl.md5  Slices_8hpp.tex  Slices_8hpp__dep__incl.md5  Slices_8hpp__incl.md5  annotated.tex  classArrayIterator.tex  (+14 more)
Gaussian/C++/ARRAY/include/: ApplyFonc.hpp  Array.hpp  ArrayException.hpp  Array_Access_Operators.hpp  Array_Array_Operators.hpp  Array_Constructors_RangeBased.hpp  Array_Constructors_RangeBased_NotSafe.hpp  Array_Output.hpp  Array_Scalar_Operators.hpp  Array_iterators.hpp  Array_resize.hpp  CEngine.hpp  FEngine.hpp  MacroRestrict.hpp  Range.hpp  Slices.hpp  mainpage.h
Gaussian/C++/ARRAY/try/: CMakeLists.txt  main.cpp
MicroBenchmarks/: README.md  runAllTests.sh
MicroBenchmarks/C++/: CMakeLists.txt  README.md  get_time.hpp  main_cl.cpp  main_lapl_1.cpp  main_lapl_2.cpp
MicroBenchmarks/C++-xtensor/: CMakeLists.txt  README.md  main_cl.cpp  main_lapl_1.cpp  main_lapl_2.cpp
Sparse/: README.md  runAllTests.sh
Sparse/C++/: CMakeLists.txt  Csr.hpp  PreLapl.hpp  PreSparse.hpp  README.md  index.hpp  main.cpp
Sparse/Stream/: CMakeLists.txt  README  bd.sage  stream.c
Weno/: README.md  runAllTests.sh
Weno/C++/: Burghers.hpp  CMakeLists.txt  Convection.hpp  GodunovFlux.hpp  LaxFriedrichsFlux.hpp  README.md  RK3TVD.hpp  Weno.hpp  main.cpp  print.hpp
Weno/C++-NoCopy-Tuned/: Burghers.hpp  CMakeLists.txt  GodunovFlux.hpp  README.md  Weno.hpp  bench_WenoLeftRightRecKernel.sh  bench_WenoLeftRightRecKernel_O3.cpp  bench_WenoLeftRightRecKernel_Ofast.cpp  bench_checksum.cpp  bench_checksum.hpp  bench_to_table.py  main.cpp
Weno/C++-xtensor/: Array.hpp  CMakeLists.txt  RK3TVD.hpp  Weno.hpp  main.cpp
Weno/Fortran/: CMakeLists.txt  compile.sh  m_RK3TVDData.F90  m_burghers.F90  m_godunov.F90  m_problem.F90  m_weno.F90  main.F90
(+197 files in other folders)
